[lib]
proc-macro = true

[package]
name = "rouge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version =  "0.8.7" }
specs = "0.18.0"
specs-derive = "0.4.1"
rand = "0.8.5"
syn = "1.0.107"
quote = "1.0.23"

[dev-dependencies]
proptest = "1.1.0"
